<resources>
    <string name="app_name">Maksab</string>
    <string name="app_test_name">Test - Customer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">الطـلبات</string>
    <string name="error">حصل خطأ ما</string>
    <string name="internetError">الرجاء حاول مرة اخرى</string>
    <string name="enableGps">يجب عليك تفعيل خدمة الموقع حتي نتمكن من جلب مقدمي الخدمات بناء على موقعك الحالي</string>
    <string name="NoInternet">جهازك غير متصل بالانترنت تاكد من توصيل جهازك على الانترنت لان جميع خدمات التطبيق مبينة على الانترنت</string>
    <string name="pleaseEnterNumber">الرجاء ادخال رقم هاتف صحيح</string>
    <string name="imageUploaded">تم تحديث الصوره بنجاح</string>
    <string name="imageUploadError">حدث خطأ اثناء رفع الصورة</string>
    <string name="enterotpCode">تم ارسال رمز التحقق الى</string>
    <string name="smsPerm">حتي نتمكن من قراءة الكود المرسل للجوال بشكل تلقائي يجب منح صلاحية قراءه الرسائل</string>
    <string name="give_per">منح صلاحية</string>
    <string name="ok">حسناً</string>
    <string name="chooseSource">حدد مصدر الصورة</string>
    <string name="Galary">معرض الصور</string>
    <string name="Camera">الكاميرا</string>
    <string name="no_close">لا , اريد الخروج من التطبيق</string>
    <string name="iconnect_theInternet">قمت بتوصيل الانترنت</string>
    <string name="orders">الطلبات</string>
    <string name="noDescription">لا يوجد وصف اضافي</string>
    <string name="order_type">"نوع الطـلب : "</string>
    <string name="no_providers">لا يوجد مقدمين نسعى لإضافة المزيد</string>
    <string name="no_favorite">لا يوجد مقدمين في المفضلة </string>
    <string name="name">الأسـم</string>
    <string name="gender">الجنـس</string>
    <string name="male">ذكــر</string>
    <string name="female">أنثــي</string>
    <string name="save_profile">حفظ الملف الشخصي</string>
    <string name="cancel_order">إلغاء الطلب</string>
    <string name="location">المـوقع</string>
    <string name="rating_note">هل لديك ملاحظة؟</string>
    <string name="rate_the_provider">قيم المقدم</string>
    <string name="select_rate">الرجاء اختر نجمة واحدة على الأقل</string>
    <string name="save_rating">شكرا لجعلك مكسب افضل برأيك في المقدمين</string>
    <string name="pleaseInterFIeld">الرجاء قم بإدخال جميع الحقول</string>
    <string name="thanksForMakeMaksabBetter">شكراً لجعلك مكسب أفضل برسالتك هذه، سيتم التواصل معك بأقرب فرصة ممكنة</string>
    <string name="favorite">أطلب مباشرة من المقدمين</string>
    <string name="rating_provider">تقيم مقدم</string>
    <string name="sure_rating_provider">هل أنت متأكد من تقيم المقدم؟</string>
    <string name="bio">نبذة عن مقدم الخدمة :</string>
    <string name="accept_offer">قبول</string>
    <string name="faq">كيف أرسل طلب؟</string>
    <string name="warining_text">ملاحظة: قم بالرد على استفسارات المقدمين حتى تحصل على عروض اسعار للخدمة التي تريدها، ولضمان حقوقك كعميل ومتابعة الطلب فيجب ان يكون كل التواصل مع المقدمين داخل التطبيق فقط</string>
    <string name="please_add_data">من فضلك قم بادخال البيانات المطلوبة</string>
    <string name="not_receving">Didn\'t get your code?</string>
    <string name="resend_otp">Resend It</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="seconds">Seconds</string>
    <string name="call_us">Have a Problem? Call Us</string>
    <string name="welcome_to_app">Welcome to Maksab</string>
    <string name="one_step">One Step Registration</string>
    <string name="update_your_mobile">Update your mobile</string>
    <string name="please_enter_otp">Please enter the OTP</string>
    <string name="your_rate">What is your service Rate?</string>
    <string name="rate_quality">Service Quailty</string>
    <string name="wow">Wow</string>
    <string name="provider_behavior">Provider Behavior</string>
    <string name="open_complain">I Want to open complain</string>
    <string name="excellant">Exellant</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="very_bad">Very Bad</string>
    <string name="slogan">All your services on one app</string>
    <string name="offers">Offers</string>
    <string name="provider_details">Provider Details</string>
    <string name="next">Next</string>
    <string name="start_now">Start Now</string>
    <string name="join_login">Join Maksab family and get the best offers and services</string>
    <string name="enter_mobile">Enter mobile start with 09 or 01</string>
    <string name="login">Login</string>
    <string name="helps">Help</string>
    <string name="notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="public_notification">Public</string>
    <string name="private_notification">Private</string>
    <string name="read_all">Real All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no_data">No data to display</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="enter_all_data_validation">Please enter all the required fields</string>
    <string name="add_new_ticket">Add New Ticket</string>
    <string name="choose_ticket_category">Choose Ticket Category</string>
    <string name="enter_ticket_details">Enter Ticket Details</string>
    <string name="enter_any_details">Enter all the details you want</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="your_input_here">Your input here</string>
    <string name="open_tickets">Opening</string>
    <string name="closed_tickets">Closed</string>
    <string name="ticket_category">Category</string>
    <string name="ticket_subcategory">Sub Category</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="waiting">Waiting</string>
    <string name="opening">Opening</string>
    <string name="completed">Completed</string>
    <string name="order_number">Order Number</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_creation_date_label">Order Creation: </string>
    <string name="order_type_label">Order Type: </string>
    <string name="order_status_label">Status: </string>
    <string name="service_type_label">Service Type: </string>
    <string name="price_label">Price: </string>
    <string name="not_specified">Not Specified</string>
    <string name="order_send_to_label">Order Send To: </string>
    <string name="price_avg_label">AVG Prices: </string>
    <string name="mobile">Mobile</string>
    <string name="address_type">Address Type</string>
    <string name="floor_number">Floor Number</string>
    <string name="add_address">Add Address</string>
    <string name="enter_your_home_address">Enter your home address</string>
    <string name="save">Save</string>
    <string name="your_balance">Your Balance</string>
    <string name="have_question">Have a Question</string>
    <string name="have_question_description">If you have any question, please add ticket and we will reply to you ASAP</string>
    <string name="we_happpy_contacting_us">We are happy to answer you</string>
    <string name="use_this_balance_anytime">You could use your balance and get discount on any order at anytime</string>
    <string name="prices">Prices</string>
    <string name="execuation_price">Execuation Price</string>
    <string name="balance_discount">Balance Discount</string>
    <string name="coupon_discount">Copoun Discount</string>
    <string name="maksab_insurance_amount">Maksab Insurance Amount</string>
    <string name="transportation_amount">Transportation Amount</string>
    <string name="spears_total_price">Spears Amount</string>
    <string name="guarantee">Guarantee</string>
    <string name="guarantee_days">Guarantee Days</string>
    <string name="days">Days</string>
    <string name="guarantee_status">Guarantee Status</string>
    <string name="guarantee_end_date">Guarantee End On</string>
    <string name="guarantee_description">You can ask for free service if the issue happends again during guarantee period</string>
    <string name="total_price">Total Price</string>
    <string name="enter_profile_info">Enter Your Profile Info</string>
    <string name="how_do_you_know_maksab">How Do You Know Maksab?</string>
    <string name="you_registered_successfully">You have successfully registered</string>
    <string name="you_updating_successfully">You have successfully update your profile</string>
    <string name="happy_time_use_app">We wish you happy time with us</string>
    <string name="welcome_message_new_customer">We will take some data to complete your profile</string>
    <string name="welcome_message_old_customer">Dear customer, we need to update some of your profile data</string>
    <string name="soon">Soon</string>
    <string name="please_wait_soon_will_activated">This category will be activated soon, stay tuned!</string>
    <string name="provider_info">Provider Info</string>
    <string name="choose_time">Choose Time</string>
    <string name="choose_address">Choose Address</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="add_images">Add Images</string>
    <string name="time_selected">Time has been selected</string>
    <string name="do_you_have_coupon">Do you have coupon?</string>
    <string name="add_coupon_here">Added Here</string>
    <string name="use_coupon">Use Coupon</string>
    <string name="or_choose_from_coupon_list">OR Choose from coupons list</string>
    <string name="open_order">Open Order</string>
    <string name="open_home">Open Home</string>
    <string name="please_wait_for_offers">Please wait for a while until order is accepted</string>
    <string name="order_created_successfully">Order has been created sucessfully</string>
    <string name="later">Later</string>
    <string name="new_update">New Update</string>
    <string name="new_update_message">You have to update the application, this new version contains new features or fixing exiting issues on the application</string>
    <string name="update">Update</string>
    <string name="be_one_of_our_customer">كن جزءاً من 70+ ألف عميل يستخدم مكسب 💙</string>
    <string name="change_my_mind">غيرت رأي</string>
    <string name="found_provider_outside">وجدت مقدم للخدمة خارج التطبيق</string>
    <string name="later_on">لاحقآ</string>
    <string name="do_you_have_any_question">هل لديك اي استفسار، شكوى، فكرة، اقتراح قم بمراسلتنا ادناه</string>
    <string name="address">العنوان</string>
    <string name="feedback_body">الموضوع ..</string>
    <string name="send_now">راسلنا الآن</string>
    <string name="call_us_from_option">للتواصل معنا عبر أرقام الدعم الفني في الأقسام التالية، يومياً من الساعة 8 صباحاً وحتى 9 مساءاً:</string>
    <string name="maintenance">الصيانة</string>
    <string name="cleaning">النظافة</string>
    <string name="beautiful">التجميل</string>
    <string name="try_app">تجربة التطبيق</string>
    <string name="no_response">لم يتم الاستجابة للطلب</string>
    <string name="other_reson">سبب اخر</string>
    <string name="please_type_reson">اكتب السبب هنا</string>
    <string name="social_media">مواقع التواصل الإجتماعي</string>
    <string name="app_store">عن طريق متجر التطبيقات</string>
    <string name="ads">عن طريق إعلان وجدته</string>
    <string name="friend_telling">أخبرني به صديق</string>
    <string name="we_hope_you_good_experiance">نعدكم .. بتقديم تجربة مميزة وفريدة</string>
    <string name="rate_maksab_on_play">قيم مكسب</string>
    <string name="rate_maksab_on_play_description">مكسب عايز تقييمك للتطبيق بشكل عام , ما حناخد من وقتك اكثر من دقيقتين , اضغط زر قيمنا الآن وقم بتقييم التطبيق في متجر بلي</string>
    <string name="rate_maksab_thanking">والف شكر على دعمك</string>
    <string name="rate_now">قيمنا الآن</string>
    <string name="attachments_can_added_later">If you have any attachments, add the ticket first then you could add any images you want</string>
</resources>