<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="17dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="7dp"
        android:text="@string/rate_maksab_on_play"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginTop="7dp"
        android:text="@string/rate_maksab_on_play_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:text="@string/rate_maksab_thanking"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:weightSum="100">
        <TextView
            android:id="@+id/rate_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/rate_now"
            android:layout_weight="50"
            />

        <TextView
            android:id="@+id/another_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="في وقت لاحق"
            android:layout_weight="30"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/no_thanks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/later_on"
            android:layout_weight="50"
            android:textAlignment="textEnd"
            android:gravity="end" />
    </LinearLayout>
</LinearLayout>