<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_category"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/ticket_category_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="العميل" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/ticket_subcategory"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/ticket_subcategory_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="العميل" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/enter_ticket_details" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ticket_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_any_details"
            android:gravity="top|start"
            android:maxLines="10"
            android:lines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/attachments_can_added_later" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_ticket_button"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_ticket"
        android:backgroundTint="@color/colorAccent">
    </com.google.android.material.button.MaterialButton>

</LinearLayout>