<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/provider_profile_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/ic_baseline_done_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/final_greeting_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/order_created_successfully"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dynamic_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/please_wait_for_offers"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/go_to_order_details"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/open_order" />

        <Button
            android:id="@+id/go_to_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/open_home" />
    </LinearLayout>
</RelativeLayout>